package com.example.psoft_aisafe.model.classes;

public class Checklist {
}
