package psoft_aisafe.aircrafts.domain;

public enum AircraftStatus {
    AVAILABLE,
    IN_FLIGHT,
    UNDER_MAINTENANCE,
    INACTIVE
}