package psoft_aisafe.model.enums;

public enum FlightStatus {
}
